major refactor code: generics